<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity"
    android:orientation="vertical"
    android:gravity="center">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
            <Button
                android:id="@+id/addStudent"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:backgroundTint="@color/turquious"
                android:text="@string/add_student"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/addcourse"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:backgroundTint="@color/turquious"
                android:text="@string/add_course"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/generate"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:backgroundTint="@color/turquious"
                android:text="@string/generate_qr"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:backgroundTint="@color/turquious"
                android:text="@string/logout"
                android:textSize="20sp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>