<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenerateQrCode"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/subjectcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_borders"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:hint="@string/course_code"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"/>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:backgroundTint="@color/turquious"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/generate"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/qrcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:backgroundTint="@color/turquious"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"/>
</LinearLayout>