<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#04BF8A"
    tools:context=".VerifyEmail">
    <Button
        android:id="@+id/verifyEmail"
        android:layout_width="150dp"
        android:layout_height="57dp"
        android:backgroundTint="#3F3D56"
        android:text="@string/send"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.806"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="287dp"
        android:layout_height="57dp"
        android:background="@drawable/curved_borders"
        android:elevation="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email_id"
        android:textColor="#3F3D56"
        android:textColorHint="#3F3D56"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="332dp"
        android:layout_height="499dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_undraw_mail_re_duel"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo2" />

</androidx.constraintlayout.widget.ConstraintLayout>